--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,4 +1,4 @@
-div {
+header {
     border-bottom: 2px solid black;
     background-color: bisque;
     padding: 5px;
@@ -13,4 +13,8 @@ h1 {
     background-color: black;
     color: white;
     border: 5px solid red;
+}
+
+button {
+    margin: 0 10px;
 }
