--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -3,17 +3,36 @@
         Source <input #source type="text">
         Destination <input #destination type="text">
         Flight Date <input #flightDate type="date">
-        ReturnDate <input #returnDate type="date" >
-        <input type="button" value="Search" (click) = "search(source.value, destination.value, flightDate.value, returnDate.value)">
+        Return Date <input #returnDate type="date">
+        <input type="button" value="Search"
+            (click)="search(source.value, destination.value, flightDate.value, returnDate.value)">
     </form>
 
-    <table>
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-        <tr></tr>
-    </table>
+    <div id="flightList">
+
+        
+        <table>
+            <tr>
+                <th>Airline</th>
+                <th>Start Time</th>
+                <th>EndTime</th>
+                <th>Ticket Cost</th>
+            </tr>
+            <tr></tr>
+        </table>
+    </div>
+
+    <div id="returnList" *ngIf="!!returnDate">
+
+        <table>
+            <tr>
+                <th>Airline</th>
+                <th>Start Time</th>
+                <th>EndTime</th>
+                <th>Ticket Cost</th>
+            </tr>
+            <tr></tr>
+        </table>
+    </div>
+
 </div>
