--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -7,11 +7,15 @@ input {
 
 #flightList {
     float:left; /* add this */
-    border: 1px solid red;
+    border: 1px solid black;
     margin: 10px;
 }
 #returnList {
-    border: 1px solid green;
+    border: 1px solid black;
     float: left; /* add this */
     margin: 10px;
+}
+
+table {
+    border: 1px solid black;
 }
