--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div>
     <form align="center">
-        Source <input #source type="text">
+        Source <input #source type="text" required="true">
         Destination <input #destination type="text">
         Flight Date <input #flightDate type="date">
         Return Date <input #returnDate type="date">
