--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
         Email<span class="required">*</span>:<br>
         <input #email type="text" formControlName="email"><br>
         Password<span class="required">*</span>:<br>
-        <input #password type="text" formControlName="password"><br>
+        <input #password type="password" formControlName="password"><br>
         <input type="submit" value="Login" [disabled]="loginForm.invalid">
     </form>
 </div>
