--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -10,6 +10,6 @@
         <input #firstName type="text" formControlName="firstName"><br>
         Email<span class="required">*</span>:<br>
         <input #lastName type="text" formControlName="lastName"><br>
-        <input type="submit" value="Login" [disabled]="registerForm.invalid">
+        <input type="submit" value="Register" [disabled]="registerForm.invalid">
     </form>
 </div>
