--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -8,7 +8,7 @@
         <input #password type="password" formControlName="password"><br>
         First Name<span class="required">*</span>:<br>
         <input #firstName type="text" formControlName="firstName"><br>
-        Email<span class="required">*</span>:<br>
+        Last Name<span class="required">*</span>:<br>
         <input #lastName type="text" formControlName="lastName"><br>
         <input type="submit" value="Register" [disabled]="registerForm.invalid">
     </form>
