--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
         <hr>
         <a routerLink="admin/addflight"><button>Add Flight</button></a>
         <a routerLink="admin/viewflights"><button>View Flights</button></a>
-        <a routerLink="admin/addschedule"><button>Add Schedule</button></a>
+        <!--<a routerLink="admin/addschedule"><button>Add Schedule</button></a>-->
         <a routerLink="admin/viewschedule"><button>View Schedule</button></a>
     </div>
 
