--- a/src/app/modules/admin/admincomponents/viewflights/viewflights.component.html
+++ b/src/app/modules/admin/admincomponents/viewflights/viewflights.component.html
@@ -1,1 +1,24 @@
-<p>viewflights works!</p>
+<p *ngIf="airlines.length==0">
+    No airlines are available
+</p>
+
+<table *ngIf="airlines.length>0">
+    <tr>
+        <th>S.No.</th>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Contact Number</th>
+        <th>Blocked</th>
+        <th>Add Schedule</th>
+    </tr>
+    <tr *ngFor="let airline of airlines;let i = index">
+        <td>{{i+1}}</td>
+        <td>{{airline.id}}</td>
+        <td>{{airline.name}}</td>
+        <td>{{airline.contactNumber}}</td>
+        <td>{{airline.blocked}}</td>
+        <td><button (click) = "addScheduleForAirline(airline.id, airline.name, airline.contactNumber, airline.blocked)">Add Achedule</button></td>
+    </tr>
+
+
+</table>
