--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,6 +17,6 @@
 
     <div align="center" *ngIf="isLoggedIn() && isUser()">
         <hr>
-        <a routerLink="search()"><button>Book Flight</button></a>
+        <a routerLink="search"><button>Book Flight</button></a>
     </div>
 </header>
