--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -25,7 +25,8 @@
                 <td>{{searchResultEntity.startTime}}</td>
                 <td>{{searchResultEntity.endTime}}</td>
                 <td>{{searchResultEntity.ticketCost}}</td>
-                <td>{{searchResultEntity.ticketCost}}</td>
+                <td *ngIf="isLoggedIn() && isUser()"><a routerLink="../user/bookflight"><button>Book Flight</button></a></td>
+                <td *ngIf="!isLoggedIn() || !isUser()"><a routerLink="../login"><button>Login to Book</button></a></td>
             </tr>
         </table>
     </div>
