--- a/src/app/modules/user/usercomponents/bookflight/bookflight.component.html
+++ b/src/app/modules/user/usercomponents/bookflight/bookflight.component.html
@@ -1,1 +1,18 @@
 <p>bookflight works!</p>
+
+<div align="center">
+    <form 
+    [formGroup]="passengerForm"
+    (submit)="addPassenger(name.value, gender.value, ageGroup.value, mealOption.value)">
+      Name<span class="required">*</span> <input #name type="text" formControlName="name">
+      Gender<span class="required">*</span> <input #gender type="text" formControlName="gender">
+      Age Group<span class="required">*</span> <input #ageGroup type="date" formControlName="ageGroup">
+      Meal Option<input #mealOption type="date" formControlName="mealOption">
+      <input type="submit" value="Add Passenger" [disabled]="passengerForm.invalid">
+  </form>
+</div>
+
+
+<div>
+    
+</div>
