--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,5 +18,6 @@
     <div align="center" *ngIf="isLoggedIn() && isUser()">
         <hr>
         <a routerLink="search"><button>Book Flight</button></a>
+        <a routerLink="user/viewbookings"><button>See Booking History</button></a>
     </div>
 </header>
